# WinTaskPro

./: .gitignore  AGENT_RULES.md  AV_SAFETY.md  BUILD_AUDIT.md  CHANGELOG.md  HANDOVER.md  README.md  SETUP.md  UPDATER.md  build_portable.bat  build_portable.ps1  clean_project.ps1  devserver.js  package-lock.json  package.json  wintaskpro-clean.ps1
.claude/: launch.json
.github/workflows/: release.yml
src/: app.js  features.js  index.html  style.css
src-tauri/: Cargo.toml  app.manifest  build.rs  resources.rc  tauri.conf.json
src-tauri/capabilities/: default.json  dev.json
src-tauri/src/: devlog.rs  log.rs  main.rs  scheduler.rs
