[package]
name = "wintaskpro"
version = "1.0.0"
edition = "2021"
default-run = "wintaskpro"

[[bin]]
name = "wintaskpro"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri      = { version = "2", features = ["wry", "tray-icon"] }
tauri-plugin-updater = "2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_TaskScheduler",
    "Win32_Security",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level     = "s"
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true
